# daphne

./:    .classpath  .git-blame-ignore-revs  .gitignore  .gitmodules  .project  404.html  CITATION  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  COO_to_CSV.py  Dockerfile  KEYS.txt  README.md  UserConfig.json  _chain.daph  addons  backup_kernels.cpp  bm_kmeans.daphne  bm_rand_mat_gen.daphne  build.sh  cc-gen-f32.daph  cc-gen.daph  cc-ops.txt  cc-read.daph  create_csv.py  daphne.code-workspace  dblp-cc-graph-tiny.mtx  del_7_2_example.daphne  deployDist.sh  deployDistributed.sh  eval_runner.sh  example-dnn.daphne  example.daphne  fpga-build-env.sh  index.html  infersparsitytest.daph  install-ubuntu-packages.sh  ir  (+33 more)
daphne-opt/: CMakeLists.txt  daphne-opt.cpp  daphne-opt.h
src/api/cli/: CMakeLists.txt  CommandLineParser.h  DaphneUserConfig.h  StatusCode.h  UserConfig.json  daphne.cpp  daphnec.cpp
src/api/general/: CMakeLists.txt
src/api/internal/: CMakeLists.txt  daphne_internal.cpp  daphne_internal.h
src/api/python/: .gitignore  LICENSE.txt  README.md  __init__.py  clean.sh  pyproject.toml
src/compiler/execution/: CMakeLists.txt  DaphneIrExecutor.cpp  DaphneIrExecutor.h
src/compiler/lowering/: AggAllOpLowering.cpp  AggColOpLowering.cpp  AggDimOpLowering.cpp  AggRowOpLowering.cpp  CMakeLists.txt  DaphneOptPass.cpp  DenseMatrixTransformPass.cpp  DistributeComputationsPass.cpp  DistributePipelinesPass.cpp  EwOpLowering.cpp  EwOpsLowering.cpp  ExtractOpLowering.cpp  FlagUpdateInPlacePass.cpp  HorizontalFusionPass.cpp  InsertDaphneContextPass.cpp  InsertFreeOpPass.cpp  KernelSelectionPass.cpp  LinkParForOutputPass.cpp  LoopVectorizationPass.cpp  LowerDenseMatrixPass.cpp  LowerRelationalAlgebraToDaphneOpPass.cpp  LowerScalarOpsPass.cpp  LowerToGPU.cpp  LowerToLLVMPass.cpp  ManageObjRefsKernelResPass.cpp  ManageObjRefsPass.cpp  MapOpLowering.cpp  MarkCUDAOpsPass.cpp  MarkFPGAOPENCLOpsPass.cpp  MarkONEAPIOpsPass.cpp  MarkVectorExtensionOpsPass.cpp  MatMulOpLowering.cpp  ModOpLowering.cpp  OptimizeColumnarOpPass.cpp  ParForOpLowering.cpp  ParForReductionDetectionPass.cpp  PhyOperatorSelectionPass.cpp  ProfilingPass.cpp  RecompilePass.cpp  ReduceColumnarOpPass.cpp  (+15 more)
src/parser/: CMakeLists.txt  CancelingErrorListener.h  Parser.h  ParserUtils.h  ScopedSymbolTable.h
src/parser/catalog/: CMakeLists.txt  KernelCatalogParser.cpp  KernelCatalogParser.h
src/parser/config/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  DaphneConfigJsonParams.h  JsonParams.h
src/parser/daphnedsl/: Builtins.cpp  Builtins.h  CMakeLists.txt  DaphneDSLBuiltins.cpp  DaphneDSLBuiltins.h  DaphneDSLGrammar.g4  DaphneDSLParser.cpp  DaphneDSLParser.h  DaphneDSLVisitor.cpp  DaphneDSLVisitor.h  DaphneLexer.g4  MLIRGenVisitors.cpp  MLIRGenVisitors.h
src/parser/daphnedsl_old/: Builtins.cpp  Builtins.h  CMakeLists.txt  DaphneLexer.g4  DaphneParser.g4  MLIRGenVisitors.cpp  MLIRGenVisitors.h
src/parser/daphnesql/: CMakeLists.txt  DaphneSQLGrammar.g4  DaphneSQLParser.cpp  DaphneSQLParser.h  DaphneSQLVisitor.cpp  DaphneSQLVisitor.h
src/parser/metadata/: CMakeLists.txt  JsonKeys.h  MetaDataParser.cpp  MetaDataParser.h  ZarrFileMetaDataParser.cpp  ZarrFileMetaDataParser.h
src/parser/sql/: CMakeLists.txt  DaphneSQLGrammar.g4  DaphneSQLParser.cpp  DaphneSQLParser.h  DaphneSQLVisitor.cpp  DaphneSQLVisitor.h  SQLGrammar.g4  SQLParser.cpp  SQLParser.h  SQLVisitor.cpp  SQLVisitor.h
test/: CMakeLists.txt  run_tests.cpp  run_tests.h  tags.h
test/api/cli/: Utils.cpp  Utils.h
test/api/python/: DaphneLibTest.cpp  context_datagen.daphne  context_datagen.py  daphne_args.py  daphne_args.txt  data_transfer_numpy.daphne  data_transfer_numpy.py  data_transfer_numpy_1.daphne  data_transfer_numpy_1.py  data_transfer_numpy_2.daphne  data_transfer_numpy_2.py  data_transfer_numpy_3.daphne  data_transfer_numpy_3.py  data_transfer_numpy_array_1d_string_shared_memory.py  data_transfer_numpy_array_1d_vector_string.daphne  data_transfer_numpy_array_float64_1d.daphne  data_transfer_numpy_array_float64_1d.py  data_transfer_numpy_array_float64_1d_shared_memory.daphne  data_transfer_numpy_array_float64_1d_shared_memory.py  data_transfer_numpy_array_float64_1d_vector.daphne  data_transfer_numpy_array_float64_1d_vector.py  data_transfer_numpy_array_float64_2d.py  data_transfer_numpy_array_float64_2d_shared_memory.daphne  data_transfer_numpy_array_float64_2d_shared_memory.py  data_transfer_numpy_array_float64_large_ones.py  data_transfer_numpy_array_float64_large_ones_shared_memory.py  data_transfer_numpy_array_float64_large_zeros.py  data_transfer_numpy_array_float64_large_zeros_shared_memory.py  data_transfer_numpy_array_inf_values.py  data_transfer_numpy_array_inf_values_vector.py  (+349 more)
test/codegen/: .gitignore  .lit_test_times.txt  CodegenTest.cpp  MatMulAccuracyTest.cpp  aggAll.mlir  aggDim.mlir  convert_daphne_to_linalg.mlir  daphne_opt.mlir  ew.mlir  ewUnary.mlir  fusion.mlir  lit.cfg  loop-vectorization.mlir  mapop.mlir  matmul.mlir  matmul_invert_loops.mlir  matmul_tile.mlir  matmul_tile_normalized.mlir  matmul_vectorized.mlir  matvec.mlir  prop_ins_udf.mlir  prop_rec_for_loop.mlir  prop_rec_if_else.mlir  prop_rec_while_loop.mlir  rephintop.mlir  stringeq.mlir  sum_agg.mlir  sum_col_agg.mlir  sum_row_agg.mlir  transpose.mlir
test/inplace/: InPlaceAPITest.cpp  InPlaceKernelTest.cpp  InPlaceMicroBench.cpp  InPlaceUtilsTest.cpp
test/tmp/: duckDB.cpp
test/util/: .gitignore  RecordPropertiesTest.cpp  lit.cfg  prop_ins_for_loop.mlir  prop_ins_if_else.mlir  prop_ins_while_loop.mlir  prop_rec_for_loop.mlir  prop_rec_if_else.mlir  prop_rec_udf.mlir  prop_rec_while_loop.mlir  properties_ins_if.json  properties_ins_udf.json  properties_ins_while.json  simplf_dynInsert.mlir  simplf_dynInsert_fail.mlir  simplf_mmSlice.mlir  simplf_mmSliceTT.mlir  simplf_mmSliceT_.mlir  simplf_mmSlice_T.mlir  simplf_sumEwadd.mlir  simplf_sumMulLambda.mlir  simplf_sumTrace.mlir  simplf_sumTranspose.mlir  test_dynInsert.mlir  test_mmRowCol.mlir  test_mmRowColTranspose.mlir  test_sumEwAdd.mlir  test_sumLambda.mlir  test_sumTranspose.mlir  test_trace.mlir
(+4268 files in other folders)
